ENH: updated about.html to be super cool

--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
     </head>
     <body>
    	 <h1>Nathan Tserng</h1>
-   	 <p>My about page</p>
+   	 <p>My super cool about page</p>
+     <p>I am a student.</p>
    	 <a href="index.html">Home</a>
     </body>
 </html>
