ENH: updated about.html to have super cool text

--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     </head>
     <body>
    	 <h1>Nathan Tserng</h1>
-   	 <p>My about page</p>
+   	 <p>My about page with super cool text</p>
    	 <a href="index.html">Home</a>
     </body>
 </html>
